fix UI on mobile phone in information page

--- a/public/assets/pay.css
+++ b/public/assets/pay.css
@@ -113,13 +113,14 @@
 
 .action-btn-wrapper {
     display: flex;
-    justify-content: space-between;
+    /* justify-content: space-between; */
     flex-wrap: wrap;
     margin-top: 12px;
 }
 
 .pay-right .pay-btn {
     margin-top: 12px;
+    margin-right: 4px;
     padding: 12px 16px;
     border-radius: 3px;
     width: 186px;
@@ -167,9 +168,5 @@
     .bg-pay::before {
         left: 4px;
         right: 4px;
-    }
-
-    .pay-right .add-to-cart-btn {
-        margin: 12px 0;
     }
 }
